refactoring graph and uvl service